err/jmetalpy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jmetal'...
Listing './lib/python3.5/site-packages/jmetal/algorithm'...
Listing './lib/python3.5/site-packages/jmetal/algorithm/multiobjective'...
Listing './lib/python3.5/site-packages/jmetal/algorithm/singleobjective'...
Listing './lib/python3.5/site-packages/jmetal/component'...
Compiling './lib/python3.5/site-packages/jmetal/component/archive.py'...
***   File "./lib/python3.5/site-packages/jmetal/component/archive.py", line 12
    self.solution_list: List[S] = []
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jmetal/component/test'...
Listing './lib/python3.5/site-packages/jmetal/core'...
Compiling './lib/python3.5/site-packages/jmetal/core/algorithm.py'...
***   File "./lib/python3.5/site-packages/jmetal/core/algorithm.py", line 22
    self.evaluations: int = 0
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jmetal/core/problem.py'...
***   File "./lib/python3.5/site-packages/jmetal/core/problem.py", line 15
    self.number_of_variables: int = None
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jmetal/core/solution.py'...
***   File "./lib/python3.5/site-packages/jmetal/core/solution.py", line 13
    self.number_of_objectives: int = number_of_objectives
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jmetal/core/test'...
Listing './lib/python3.5/site-packages/jmetal/operator'...
Listing './lib/python3.5/site-packages/jmetal/operator/test'...
Listing './lib/python3.5/site-packages/jmetal/problem'...
Listing './lib/python3.5/site-packages/jmetal/problem/multiobjective'...
Listing './lib/python3.5/site-packages/jmetal/problem/multiobjective/test'...
Listing './lib/python3.5/site-packages/jmetal/problem/singleobjective'...
Listing './lib/python3.5/site-packages/jmetal/problem/singleobjective/test'...
Listing './lib/python3.5/site-packages/jmetal/runner'...
Listing './lib/python3.5/site-packages/jmetal/runner/multiobjective'...
Listing './lib/python3.5/site-packages/jmetal/runner/singleobjective'...
Listing './lib/python3.5/site-packages/jmetal/runner/singleobjective/evolution_strategy'...
Listing './lib/python3.5/site-packages/jmetal/runner/singleobjective/genetic_algorithm'...
Listing './lib/python3.5/site-packages/jmetal/util'...
Listing './lib/python3.5/site-packages/jmetal/util/test'...
Listing './lib/python3.5/site-packages/jmetalpy-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
